@@ -1,4 +1,4 @@
-.\" RCSid "$Id: gensky.1,v 1.4 2004/01/01 19:31:44 greg Exp $"
+.\" RCSid "$Id: gensky.1,v 1.5 2004/09/10 18:19:24 greg Exp $"
 .TH GENSKY 1 4/24/98 RADIANCE
 .SH NAME
 gensky - generate a RADIANCE description of the sky
@@ -211,7 +211,7 @@ degrees west of Greenwich.
 (Use negative angle for east.)
 This is used in the calculation of solar time.
 Be sure to give the correct longitude also!
-If solar time is given directly, then this option has no effect.
+If a time zone or solar time is given directly, then this option has no effect.
 .SH EXAMPLE
 To produce a sunny sky for July 4th at 2:30pm Eastern daylight time at a
 site latitude of 42 degrees, 89 degrees west longitude:
